margin overlap is fixed

--- a/src/client/components/slider/index.css
+++ b/src/client/components/slider/index.css
@@ -1,4 +1,3 @@
 .slider {
-    margin: 50px;
-    display: inline;
+    margin: 20px 2px;
 }
